# UAT

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup.sh
src/: config.rs  lib.rs  main.rs
src/pt/: client.rs  env.rs  mod.rs  server.rs
src/socks5/: mod.rs
tor-config/bridge/: torrc
