[package]
name = "quictor-pt"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
tokio = { version = "1.42", features = ["full"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rcgen = "0.13"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "quictor-pt"
path = "src/main.rs"

[lib]
name = "quictor_pt"
path = "src/lib.rs"
